# youtube-niche-radar

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  models.py  schemas.py  tasks.py  utils.py
backend/app/api/routes/: analytics.py  channels.py  dashboard.py  maintenance.py  tasks.py  videos.py
backend/app/core/: config.py
backend/app/services/: ai_classifier.py  channel_baseline.py  format_analytics.py  format_classifier.py  ingest.py  llm_client.py  metrics.py  niche_analytics.py  niche_classifier.py  outlier_explainer.py  quota.py  reclassify_formats.py  reclassify_niches.py
backend/app/youtube/: client.py
backend/migrations/: 001_init.sql  002_seed_formats.sql  003_upgrade_0_1_to_0_2.sql  004_add_indexes.sql  005_seed_more_formats.sql  006_add_classifier_version.sql
backend/tests/: conftest.py  test_ai_classifier.py  test_analytics_api.py  test_channel_baseline.py  test_channels_api.py  test_csv_import.py  test_format_analytics.py  test_format_classifier.py  test_health.py  test_llm_client.py  test_migrations.py  test_niche_analytics.py  test_niche_classifier.py  test_outlier_explainer.py  test_outliers_api.py  test_reclassify_formats.py  test_scan_filters.py  test_scoring.py  test_tasks.py  test_utils.py
docs/: API_EXAMPLES.md
frontend/: README.md  package-lock.json  package.json
frontend/.next/: trace
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/components/: ChannelManager.tsx  FormatDashboard.tsx  NicheDashboard.tsx  (+2 more)
samples/: channels.csv
(+15 files in other folders)
