[project]
name = "youtube-niche-radar"
version = "0.2.0"
description = "MVP backend for YouTube niche and outlier discovery"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "celery>=5.4",
  "redis>=5.0",
  "python-dateutil>=2.9",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.ruff]
line-length = 100
